# tlg-emu-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README  tlg-emu-tools.sln
brazor/: brazor.cc  brazor.h  brazor.vcxproj  brazor.vcxproj.filters  config.h  gcn_context_regs.cc  gcn_op_names.cc  gcn_shader_regs.cc  gui.cc  gui.h  gui_cmdlist.cc  gui_cmdlist.h  gui_main.cc  gui_menu.cc  gui_menu.h
brazor/linux/: ipc.cc
brazor/win32/: ipc.cc
common/: cmdproc_iface.h  common.h  common.vcxproj  common.vcxproj.filters  display_iface.h  gpu_iface.h  gpu_shared.cc  gpu_shared.h  ipc_manager.h
common/linux/: ipc_manager.cc
common/win32/: ipc_manager.cc  smart_handle.h
third/_vs_projects_/: miniz.h  miniz.vcxproj  miniz.vcxproj.filters  zstd.vcxproj  zstd.vcxproj.filters
third/gcn/: si_ci_vi_merged_pm4defs.h
